hphp/hack/test/typecheck/arithmetic_enum.php.rust_elab.exp
File "arithmetic_enum.php", line 13, characters 3-13:
  int
File "arithmetic_enum.php", line 14, characters 3-13:
  int
File "arithmetic_enum.php", line 15, characters 3-13:
  int
File "arithmetic_enum.php", line 4, characters 6-6:
`HH\BuiltinEnum` is an implementation internal class that cannot be used directly (Naming[2053])
